# ap-basic-matter-ready-connected-hmi

./: .gitmodules  LICENSE.txt  README.md  SCR-1.1.txt  SW-Content-Register.txt  ap-basic-matter-ready-connected-hmi.xml
basic_connected_hmi_app/: .gn  BUILD.gn  args.gni  build_overrides  rt_hmi.ld
basic_connected_hmi_app/patch/: BUILD_rt1060.gn.patch  BUILD_rt_sdk.gn.patch  ConnectivityManagerImpl.cpp.patch  ConnectivityManagerImpl.h.patch  FreeRTOSConfig.h.patch  Logging.cpp.patch  NetworkCommissioningDriver.h.patch  NetworkCommissioningWiFiDriver.cpp.patch  PlatformManagerImpl.cpp.patch  board.c.patch  hardware_init.c.patch  lvgl_support.c  lvgl_support.h  nxp_sdk.gni.patch  patch_rt_app.sh  pin_mux.c.patch  pin_mux.h.patch  rt1060.gni.patch  rt_executable.gni.patch  rt_sdk.gni.patch  source_activation_fix.patch  streamer_nxp.cpp.patch  wlan.c.patch
basic_connected_hmi_app/src/main/: AppAssert.cpp  AppMatterButton.cpp  AppMatterButtonEmpty.cpp  AppMatterCli.cpp  AppTask.cpp  CHIPDeviceManager.cpp  DeviceCallbacks.cpp  WifiConnect.cpp  ZclCallbacks.cpp  binding-handler.cpp  display_app.cpp  main.cpp
basic_connected_hmi_app/src/main/assets/: bluetoothIcon.c  displayResources.c  displayResources.h  gazIcon.c  infoqrIcon.c  matterIcon.c  networkIcon.c  nxpIcon.c  onoffIcon.c  qrcodeIcon.c  thermometerIcon.c  threadIcon.c
basic_connected_hmi_app/src/main/include/: AppEvent.h  AppMatterButton.h  AppTask.h  CHIPDeviceManager.h  DeviceCallbacks.h  WifiConnect.h  application_config.h  binding-handler.h  display_app.h  lv_conf.h
binaries/: binaries_readme.md
